force-app/main/default/objects/StorageFee__c/StorageFee__c.object-meta.xml
<CustomObject>
    <label>保管料</label>
    <nameField>
        <displayFormat>STF-{00000000}</displayFormat>
        <label>保管料#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>