force-app/main/default/objects/StorageFee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>保管料</relationshipLabel>
    <relationshipName>StorageFeeList</relationshipName>
    <type>Lookup</type>
</CustomField>