force-app/main/default/objects/StorageFee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>有効(手動)</label>
    <type>Checkbox</type>
</CustomField>