force-app/main/default/objects/StorageFee__c/fields/Active_F__c.field-meta.xml
<CustomField>
    <fullName>Active_F__c</fullName>
    <formula>PriceTable__r.Active_F__c &amp;&amp; Active__c &amp;&amp; NOT(Account__r.WarehouseContractTermination__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>