force-app/main/default/objects/StorageFee__c/fields/CarryOutDate__c.field-meta.xml
<CustomField>
    <fullName>CarryOutDate__c</fullName>
    <label>実施日</label>
    <type>Date</type>
</CustomField>