force-app/main/default/objects/StorageFee__c/fields/PriceTable__c.field-meta.xml
<CustomField>
    <fullName>PriceTable__c</fullName>
    <label>価格管理</label>
    <referenceTo>PriceTable__c</referenceTo>
    <relationshipLabel>保管料</relationshipLabel>
    <relationshipName>StorageFeeList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>