force-app/main/default/objects/StorageFee__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProductMaster__c.StandardUnit__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>保管料</relationshipLabel>
    <relationshipName>StorageFee</relationshipName>
    <type>Lookup</type>
</CustomField>