force-app/main/default/objects/StorageFee__c/fields/UnitPriceArrival__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceArrival__c</fullName>
    <label>単価 入庫</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>