force-app/main/default/objects/StorageFee__c/fields/UnitPriceShipping__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceShipping__c</fullName>
    <label>単価 出庫</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>