force-app/main/default/objects/StorageFee__c/fields/UnitPriceStorage__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceStorage__c</fullName>
    <label>単価 保管</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>