force-app/main/default/objects/StorageFee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PriceTable__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>UnitPriceArrival__c</columns>
    <columns>UnitPriceShipping__c</columns>
    <columns>UnitPriceStorage__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>